--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -37,7 +37,7 @@
   <section>
   <div class="bg-blue-25 py-3">
     <div class="container px-4 py-3">
-      <p>Texte und Inhalte verfügbar als <a href="https://creativecommons.org/licenses/by/3.0/de/" target="_blank" rel="noopener noreferrer" class="underline">CC-BY</a>, Illustrationen © Lea Scheidt</p>
+      <p>Texte und Inhalte verfügbar als <a href="https://creativecommons.org/licenses/by/3.0/de/" target="_blank" rel="noopener noreferrer" class="underline">CC BY</a>, Illustrationen © Lea Scheidt</p>
     </div>
     <section class="container mt-0 px-4 flex justify-between flex-wrap">
       <span>© 2022 Technologiestiftung Berlin</span>
