fix(footer): handle small screen sizes for legal section

--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -41,7 +41,7 @@
     </div>
     <section class="container mt-0 px-4 flex justify-between flex-wrap">
       <span>© 2022 Technologiestiftung Berlin</span>
-      <ul class="flex gap-2 sm:gap-4">
+      <ul class="block sm:flex gap-2 sm:gap-4 flex-wrap">
         <li><a targe="_blank" rel="noopener noreferrer" href="mailto:info@citylab-berlin.org">Kontakt</a></li>
         <li><a targe="_blank" rel="noopener noreferrer" href="https://github.com/technologiestiftung/service-agentinnen">Quellcode</a></li>
         <li><a targe="_blank" rel="noopener noreferrer" href="mailto:info@citylab-berlin.org">Probleme der Barrierfreiheit melden</a></li>
