--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -14,7 +14,7 @@
   <img
     src="/assets/images/schulung.webp"
     alt="Viele Menschen stehen um einen Tisch herum"
-    class="col-span-1 md:col-span-8 w-full max-w-full h-96 object-cover"
+    class="col-span-1 md:col-span-8 lg:col-start-9 lg:col-span-4 w-full aspect-auto"
   />
   <div class="col-span-1 md:col-span-12">
     <h3 class="text-lg sm:text-xl md:text-2xl text-magenta-500">
